# pre-commit-ruff-version-sync

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  bump_version.py  main.py  pyproject.toml  sync.py
.github/workflows/: release.yml
